--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,8 +8,7 @@
     <string name="join_lobby">Lobby beitreten</string>
     <string name="join">beitreten</string>
     <string name="create_lobby">Lobby erstellen</string>
-    <string name="create">erstellen</string>
-    <string name="name">Name</string>
+    <string name="address">Adresse</string>
     <string name="password">Passwort</string>
     <string name="limit_players">Spieler begrenzen</string>
     <string name="limit_players_to">auf</string>
