kleiner Commit ohne wirkliche änderungen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,6 @@
     <string name="villager">Dorfbewohner</string>
     <string name="show">Info</string>
     <string name="werewolf">Werwolf</string>
+
+    <string name="villager_info">Der Dorfbewohner kann gar nichts.</string>
 </resources>
