id:219 comment: client-service erstellt. noch nicht eingebaut und noch nicht funktionstüchtig.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,4 +45,9 @@
 
     <!-- - - - - - - - - - - - - - MenuFragment - - - - - - - - - - - - - -->
     <string name="wiki">Wiki</string>
+
+    <!-- - - - - - - - - - - - - - Network - - - - - - - - - - - - - -->
+    <string name="service_stopped_title">Netzwerkproblem</string>
+    <string name="service_stopped_text">Es gab Probleme mit der Verbindung. Fehlermeldung: \n%1$s</string>
+
 </resources>
