--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,5 +56,9 @@
     <string name="service_stopped_title">Netzwerkproblem</string>
     <string name="service_stopped_text">Es gab Probleme mit der Verbindung. Fehlermeldung: \n%1$s</string>
     <string name="title_activity_regeln">RegelnActivity</string>
+    <string name="title_activity_settings">Settings</string>
+
+    <!-- Strings related to Settings -->
+
 
 </resources>
